[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/WhiteScreen.gd" type="Script" id=2]
[ext_resource path="res://Graphics/joystix.monospace.ttf" type="DynamicFontData" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Levels" type="Node" parent="."]

[node name="WhiteScreen" type="Sprite" parent="."]
position = Vector2( 638.774, 404.468 )
scale = Vector2( 1.21943, 8.41228 )
z_index = 2000
texture = SubResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1080, 100 )
script = ExtResource( 2 )

[node name="Timer" type="Label" parent="."]
anchor_right = 1.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 3 )
text = "Timer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="."]
anchor_right = 1.0
margin_top = 35.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 4 )
text = "Use Arrow keys to move & press R to restart level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restarts" type="Label" parent="."]
custom_fonts/font = SubResource( 5 )
text = "Restarts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
custom_fonts/font = SubResource( 6 )
text = "Level"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" type="CanvasLayer" parent="."]

[node name="Win" type="Label" parent="EndScreen"]
visible = false
anchor_right = 1.0
margin_top = 191.0
margin_bottom = 272.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You have completed The Game!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cheat" type="Label" parent="EndScreen"]
visible = false
anchor_right = 1.0
margin_top = 191.0
margin_bottom = 272.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You have cheated The Game!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info2" type="Label" parent="EndScreen"]
visible = false
anchor_right = 1.0
margin_top = 527.0
margin_bottom = 608.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press R to restart the game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Final_Time" type="Label" parent="EndScreen"]
visible = false
anchor_right = 1.0
margin_top = 316.0
margin_bottom = 397.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Final Time: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Final_Restarts" type="Label" parent="EndScreen"]
visible = false
anchor_right = 1.0
margin_top = 396.0
margin_bottom = 477.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Final Restarts:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
